# AI-Chatbot

./: .gitignore  README.md  query.sql  render.yaml
ai-support-n8n/: Dockerfile  agent_message_bridge.json  category_selector.json  escalation_handler.json  inbound_handler.json  llm_brain.json  llm_brain_backup.json  outbound_sender.json  render.yaml  router.json  router_backup.json  session_manager.json
frontend/agent-console/: index.html  package-lock.json  package.json
frontend/agent-console/src/: App.jsx  styles.css
frontend/agent-console/src/components/: ChatInterface.jsx  ConnectionStatus.jsx  EscalationCard.jsx  LoginScreen.jsx
frontend/demo-website/: demo.html  demo.html.backup
frontend/owner-dashboard/: index.html  package-lock.json  package.json
frontend/owner-dashboard/src/: App.jsx  styles.css
frontend/owner-dashboard/src/components/: CategoryPerformance.jsx  ConversationList.jsx  CostAnalytics.jsx  DateRangePicker.jsx  MetricsOverview.jsx  RealtimeStats.jsx
knowledge-base/: account_security.txt  human_agent.txt  orders_tracking.txt  payments_billing.txt  product_questions.txt  promotions_discounts.txt  returns_exchanges.txt  sizing.txt
scripts/: ingest_knowledge.py  requirements.txt
server/: README.md  auth.py  config.py  cost_calculator.py  database.py  generate_agent_token.py  main.py  models.py  pyproject.toml  render.yaml  test_db.py  websocket_manager.py
